Implementación de seguridad de contraseñas cifradas + Validación de entidades

--- a/src/main/resources/templates/views/user/user-list.html
+++ b/src/main/resources/templates/views/user/user-list.html
@@ -19,7 +19,7 @@
                 <tr>
                     <th style="width:5%;" th:text="#{msg.user-list.id}">ID</th>
                     <th style="width:15%;" th:text="#{msg.user-list.username}">Usuario</th>
-                    <th style="width:15%;" th:text="#{msg.user-list.passwordHash}">Contraseña</th>
+                    <th style="width:15%;" th:text="#{msg.user-list.passwordHash}">Contraseña hash</th>
                     <th style="width:7%;" th:text="#{msg.user-list.active}">Activo</th>
                     <th style="width:10%;" th:text="#{msg.user-list.accountNonLocked}">No Bloqueada</th>
                     <th style="width:10%;" th:text="#{msg.user-list.lastPasswordChange}">Último Cambio</th>
