--- a/src/main/resources/templates/views/region/region-list.html
+++ b/src/main/resources/templates/views/region/region-list.html
@@ -8,7 +8,7 @@
 <header th:replace="fragments/header :: header"></header>
 
 <!-- Contenido dinámico -->
-<main class="list-page">
+<main class="list-page" style="padding-top:100px;">
     <div class="list-card">
 
         <br><br>
