--- a/src/main/resources/templates/views/user/user-form.html
+++ b/src/main/resources/templates/views/user/user-form.html
@@ -6,7 +6,7 @@
 
 <header th:replace="fragments/header :: header"></header>
 
-<main class="form-page">
+<main class="form-page" style="padding-top:100px;">
     <div class="form-card">
 
         <!-- Título -->
