--- a/src/main/resources/templates/views/province/province-form.html
+++ b/src/main/resources/templates/views/province/province-form.html
@@ -41,8 +41,8 @@
 
             <!-- Región (select). En edición debe aparecer la región actual seleccionada -->
             <div class="mb-3">
-                <label for="region" class="form-label" th:text="#{msg.province-form.region}"></label>
-                <select id="region" class="form-select" th:field="*{region.id}">
+                <label for="regionId" class="form-label" th:text="#{msg.province-form.region}"></label>
+                <select id="regionId" class="form-select" th:field="*{regionId}">
                     <!-- Opción vacía / placeholder -->
                     <option value="" th:text="#{msg.province-form.region.select}"></option>
 
@@ -52,10 +52,7 @@
 
                 <!-- Errores asociados a la región (NotNull en province.region) -->
                 <!-- Se corresponde con la validación derivada del Entity -->
-                <div class="text-danger"
-                     th:if="${#fields.hasErrors('region.id')}"
-                     th:errors="*{region.id}">
-                </div>
+                <div class="text-danger" th:if="${#fields.hasErrors('regionId')}" th:errors="*{regionId}"></div>
             </div>
 
             <!-- Botón submit dinámico -->
